--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -56,7 +56,9 @@
         android:layout_marginVertical="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_task_date" />
+        app:layout_constraintTop_toBottomOf="@id/edit_task_date"
+        />
+
 
     <Button
         android:id="@+id/btn_add_task"
